# ColorCalc_GUI

./: .gitignore  .gitmodules  CMakeLists.txt  PaintCalculationTab.cpp  PaintCalculationTab.h  README.md  common_methods.cpp  common_methods.h  foilcalculationtab.cpp  foilcalculationtab.h  foilrollstab.cpp  foilrollstab.h  itab.cpp  itab.h  lacquercalculationtab.cpp  lacquercalculationtab.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintcalculationtab.cpp  paintcalculationtab.h  presetcreationpopup.cpp  presetcreationpopup.h  presetremovalpopup.cpp  presetremovalpopup.h  presetupdatepopup.cpp  presetupdatepopup.h
assets/palettes/: GreenButtonPalette.xml  RedButtonPalette.xml  UnnecessaryFieldsSectionPalette.xml  UpdateButtonPalette.xml
configs/: color_calc.conf
data/: config.json  standard_presets.json  tables_structure.json  user_presets.json
modules/NamedField/: CMakeLists.txt  main.cpp  namedfield.cpp  namedfield.h  namedfield.ui
modules/PopUp/: CMakeLists.txt  inputpopup.cpp  inputpopup.h  inputpopup.ui  main.cpp
